--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 .caption {
     margin-top: 100px !important;
 }
+
+.section-search input {
+    padding: 5px !important;
+    font-size: 18px !important;
+    width: 90% !important;
+    border: #f4f4f4 3px solid !important;
+
+
+}
